[tool.poetry]
name = "curl2py"
version = "0.0.3"
description = "A certbot plugin for DNSPod"
authors = ["codeif <me@codeif.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/codeif/curl2py"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
Werkzeug = "^2.2.2"
six = "^1.16.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.10.0"

[tool.poetry.scripts]
curl2py = "curl2py:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
